# sustainability

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  sustainability.py
.github/workflows/: ci.yml
examples/: quickstart.py
src/sustainability/: __init__.py  cli.py  core.py
tests/: test_core.py
