[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sustainability-ml"
version = "0.1.0"
description = "Sustainability of Machine Learning Models with multi-objective genetic programming"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Jorge Martinez-Gil" }
]
keywords = ["machine-learning", "sustainability", "genetic-programming", "multi-objective-optimization"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "numpy>=1.26,<3.0",
  "deap>=1.4.1,<2.0",
  "scikit-learn>=1.4,<2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.5,<1.0",
  "mypy>=1.10,<2.0"
]

[project.urls]
Homepage = "https://github.com/jorge-martinez-gil/sustainability"
Repository = "https://github.com/jorge-martinez-gil/sustainability"
Documentation = "https://github.com/jorge-martinez-gil/sustainability#readme"
Issues = "https://github.com/jorge-martinez-gil/sustainability/issues"

[project.scripts]
sustainability = "sustainability.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
strict_optional = true
